[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Media.png" type="Texture" id=1]
[ext_resource path="res://script_ajuda.gd" type="Script" id=2]
[ext_resource path="res://Recursos/AviaoAjuda.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 16 )

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -328, 232 )
scale = Vector2( 0.446878, 0.452818 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( 0.701681, 0.701681 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 17, 5, 423, 119 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="Area2D"]
position = Vector2( -8, 41.75 )

[node name="Timer" type="Timer" parent="Area2D"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 6.5
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="Area2D"]
stream = ExtResource( 3 )

[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="Area2D/Timer2" to="Area2D" method="_on_Timer2_timeout"]
